--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="container">
         <div class="row">
-            <section id="sobre">
+            <div id="sobre">
                 <div class="col-sm-5 col-md-5 col-xl-5">
                     <p>
                         Level 5 - Empresa Júnior de Informática
@@ -32,12 +32,12 @@
                         pensando
                         sempre no cliente em primeiro lugar.
                     </p>
+                </div>
+            <div class="col-sm-7 col-md-7 col-xl-7">
+                <img src="lustreprog.jpg">
+            </div>
+            </div>
 
-                </div>
-                <div class="col-sm-7 col-md-7">
-                    <img src="lustreprog.jpg">
-                </div>
-            </section>
 
             <div class="col-sm-4 text-center">
                 <img src="sistema_web.jpg">
