--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
 
     <h1>LEVEL5</h1>
     <p>ainda nao ta 2% pronto</p>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-            </div>
-        </div>
-    </div>
+    
 
     <div class="container">
         <div class="row">
@@ -34,7 +29,7 @@
                     </p>
                 </div>
             <div class="col-sm-7 col-md-7 col-xl-7">
-                <img src="lustreprog.jpg">
+                <img src="lustreprog.JPG">
             </div>
             </div>
 
@@ -70,7 +65,7 @@
                     <h3>Column 6</h3>
                 </div>
                 <div class="col-sm-3">
-                    <img src="mouse.jpg">
+                    <img src="mouse.JPG">
                 </div>
             </section>
             <div class="col-sm-8" style="background-color:#c8d83d">
