--- a/index.html
+++ b/index.html
@@ -10,30 +10,28 @@
 
     <h1>LEVEL5</h1>
     <p>ainda nao ta 2% pronto</p>
-    
+
 
     <div class="container">
-        <div class="row">
-            <div id="sobre">
-                <div class="col-sm-5 col-md-5 col-xl-5">
-                    <p>
-                        Level 5 - Empresa Júnior de Informática
+        <div class="row" id="sobre">
+            <div class="col-sm-5 col-md-5 col-xl-5">
+                <p>
+                    Level 5 - Empresa Júnior de Informática
 
-                        A Level 5 foi a maneira como os alunos do Instituto de Informática da Universidade Federal de
-                        Goiás
-                        encontraram para colocarem todo seu conhecimento em prática.
+                    A Level 5 foi a maneira como os alunos do Instituto de Informática da Universidade Federal de
+                    Goiás
+                    encontraram para colocarem todo seu conhecimento em prática.
 
-                        Tendo como objetivo levar o melhor do design e tecnologia de maneira eficiente e simples,
-                        pensando
-                        sempre no cliente em primeiro lugar.
-                    </p>
-                </div>
+                    Tendo como objetivo levar o melhor do design e tecnologia de maneira eficiente e simples,
+                    pensando
+                    sempre no cliente em primeiro lugar.
+                </p>
+            </div>
             <div class="col-sm-7 col-md-7 col-xl-7">
                 <img src="lustreprog.JPG">
             </div>
-            </div>
-
-
+        </div>
+        <div class="row">
             <div class="col-sm-4 text-center">
                 <img src="sistema_web.jpg">
                 <h3>Sistemas Web</h3>
@@ -53,21 +51,23 @@
                 <p>Desenvolvimento de sites institucionais responsivos, onde seu cliente poderá acessar por qualquer
                     dispositivo.</p>
             </div>
-            <section id="servicos">
-                <div class="col-sm-7">
-                    <h3>
-                        Conheça Nossa Equipe
+        </div>
+        <div class="row" id="servicos">
+            <div class="col-sm-7 col-md-7 col-xl-7">
+                <h3>
+                    Conheça Nossa Equipe
 
-                        Saiba um pouco mais sobre a Level 5
-                    </h3>
-                </div>
-                <div class="col-sm-2">
-                    <h3>Column 6</h3>
-                </div>
-                <div class="col-sm-3">
-                    <img src="mouse.JPG">
-                </div>
-            </section>
+                    Saiba um pouco mais sobre a Level 5
+                </h3>
+            </div>
+            <div class="col-sm-2 col-md-2 col-xl-2">
+                <h3>Column 6</h3>
+            </div>
+            <div class="col-sm-3 col-md-3 col-xl-3">
+                <img src="mouse.JPG">
+            </div>
+        </div>
+        <div class="row">
             <div class="col-sm-8" style="background-color:#c8d83d">
                 <h3>Column 7</h3>
 
