--- a/index.html
+++ b/index.html
@@ -60,57 +60,85 @@
                     Saiba um pouco mais sobre a Level 5
                 </h3>
             </div>
-            <div class="col-sm-2 col-md-2 col-xl-2">
-                <h3>Column 6</h3>
+            <div class="col-sm-2 col-md-2 col-xl-2 text-center">
+                <button>aa</button>
             </div>
             <div class="col-sm-3 col-md-3 col-xl-3">
                 <img src="mouse.JPG">
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-8" style="background-color:#c8d83d">
-                <h3>Column 7</h3>
-
+            <div class="col-sm-5">
+                <img src="livro.JPG">
             </div>
-            <div class="col-sm-4" style="background-color:#969b71"></div>
-            <div class="col-sm-4" style="background-color:#24ce7e"></div>
-            <div class="col-sm-8" style="background-color:#798043">
-                <h3>Column 8</h3>
+            <div class="col-sm-3">
+                <p>
+                    Tire a Sua Ideia do Papel
 
+                    Sabe aquela ideia genial que você teve enquanto dirigia?
+                    Estamos aqui pra transformá-la em realidade com você!
+                </p>
             </div>
-            <div class="col-sm-8" style="background-color:#b4b4b4">
-                <h3>Column 9</h3>
+            <div class="col-sm-4"></div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    Acompanhamento e Transparência
 
+                    Sem termos e jargões complicados, nosso relacionamento será sempre transparente e com tudo feito
+                    exatamente do jeito que você pediu.
+                </p>
             </div>
-            <div class="col-sm-4" style="background-color:#e264d1"></div>
-            <div class="col-sm-12" style="background-color:#75226a">
-                <h3>Column 10</h3>
+            <div class="col-sm-4">
+                <img src="joia.JPG">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-5">
+                <img src="pc.JPG">
+            </div>
+            <div class="col-sm-3">
+                <p>
+                    Tire a Sua Ideia do Papel
 
+                    Sabe aquela ideia genial que você teve enquanto dirigia?
+                    Estamos aqui pra transformá-la em realidade com você!
+                </p>
             </div>
-            <div class="col-sm-2" style="background-color:#2555f3">
+            <div class="col-sm-4"></div>
+        </div>
+        <div class="row">
 
+            <div class="col-sm-12 text-center" >
+                <img src="hand.JPG">
+                <p>Clientes Satisfeitos</p>
             </div>
-            <div class="col-sm-2" style="background-color:#75226a">
-                <h3>Column 12</h3>
-
+        </div>
+        <div class="row">
+            <div class="col-sm-2" >
+                    
             </div>
-            <div class="col-sm-2" style="background-color:#75226a">
-                <h3>Column 13</h3>
-
+            <div class="col-sm-2" >
+                <img src="exlege.JPG">
             </div>
-            <div class="col-sm-2" style="background-color:#75226a">
-                <h3>Column 14</h3>
-
+            <div class="col-sm-2" >
+                <img src="goiasjr.JPG">
             </div>
-            <div class="col-sm-2" style="background-color:#75226a">
-                <h3>Column 15</h3>
-
+            <div class="col-sm-2" >
+                    <img src="nayaraujo.JPG">
             </div>
-            <div class="col-sm-2" style="background-color:#2555f3">
+            <div class="col-sm-2" >
+                    <img src="statusjr.JPG">
+            </div>
+            <div class="col-sm-2" >
 
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
