--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
 </head>
 
 <body>
-
-    <h1>LEVEL5</h1>
-    <p>ainda nao ta 2% pronto</p>
-
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">WebSiteName</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">Page 1</a></li>
+                    <li><a href="#">Page 2</a></li>
+                    <li><a href="#">Page 3</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 
     <div class="container">
         <div class="row" id="sobre">
@@ -31,6 +42,8 @@
                 <img src="lustreprog.JPG">
             </div>
         </div>
+    </div>
+    <div class="container">
         <div class="row">
             <div class="col-sm-4 text-center">
                 <img src="sistema_web.jpg">
@@ -52,7 +65,9 @@
                     dispositivo.</p>
             </div>
         </div>
-        <div class="row" id="servicos">
+    </div>
+    <section class="container">
+        <div class="row" id="servicos" style="padding-top:50px">
             <div class="col-sm-7 col-md-7 col-xl-7">
                 <h3>
                     Conheça Nossa Equipe
@@ -67,7 +82,9 @@
                 <img src="mouse.JPG">
             </div>
         </div>
-        <div class="row">
+    </section>
+    <div class="container">
+        <div class="row" style="padding-top:50px">
             <div class="col-sm-5">
                 <img src="livro.JPG">
             </div>
@@ -81,7 +98,9 @@
             </div>
             <div class="col-sm-4"></div>
         </div>
-        <div class="row">
+    </div>
+    <div class="container">
+        <div class="row" style="padding-top:50px">
             <div class="col-sm-4">
             </div>
             <div class="col-sm-4">
@@ -96,7 +115,9 @@
                 <img src="joia.JPG">
             </div>
         </div>
-        <div class="row">
+    </div>
+    <div class="container">
+        <div class="row" style="padding-top:50px">
             <div class="col-sm-5">
                 <img src="pc.JPG">
             </div>
@@ -110,34 +131,73 @@
             </div>
             <div class="col-sm-4"></div>
         </div>
-        <div class="row">
+    </div>
+    <div class="container">
+        <div class="row" style="padding-top:50px">
 
-            <div class="col-sm-12 text-center" >
+            <div class="col-sm-12 text-center">
                 <img src="hand.JPG">
                 <p>Clientes Satisfeitos</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-2" >
-                    
+    </div>
+    <div class="container">
+        <div class="row" style="padding-top:50px">
+            <div class="col-sm-2">
+
             </div>
-            <div class="col-sm-2" >
+            <div class="col-sm-2">
                 <img src="exlege.JPG">
             </div>
-            <div class="col-sm-2" >
+            <div class="col-sm-2">
                 <img src="goiasjr.JPG">
             </div>
-            <div class="col-sm-2" >
-                    <img src="nayaraujo.JPG">
+            <div class="col-sm-2">
+                <img src="nayaraujo.JPG">
             </div>
-            <div class="col-sm-2" >
-                    <img src="statusjr.JPG">
+            <div class="col-sm-2">
+                <img src="statusjr.JPG">
             </div>
-            <div class="col-sm-2" >
+            <div class="col-sm-2">
 
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="container">
+            <div class="row" style="padding-top:50px">
+                <div class="col-sm-4">
+                    <h3>
+                        Quando se sonha sozinho é apenas um sonho. Quando se sonha juntos é o começo da realidade.
+                        -Cervantes
+                    </h3>
+                </div>
+
+                <div class="col-sm-3">
+                    <h3>Contato</h3>
+                        <p>E-mail: contato@level5jr.com.br
+                        Telefone: +55 (62) 98205-3820</p>
+                        <h3>Endereço</h3>
+                        <p>Avenida Esperança, 1533
+                        (Via Local: Alameda Palmeiras)
+                        Quadra D, bloco 8,
+                        Sala 5, Campus Samambaia, UFG
+                        CEP 74690-900
+                        Goiânia, GO
+                        Brasil</p>
+                    </h3>
+                </div>
+                <div class="col-sm-5">
+                    <H1>Fale Conosco</H1>
+                    <div class="contato">
+                        <input type="text" placeholder="Nome"><br><br>
+                        <input type="text" placeholder="E-mail"><br><br>
+                        <input type="text" placeholder="Mensagem">
+                    </div>
+                </div>
+            </div>
+    </footer>
 
 </body>
 
