--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </p>
             </div>
             <div class="col-sm-4">
-                <img src="joia.JPG">
+                <img src="joia.jpg">
             </div>
         </div>
     </div>
