Com as imagens que faltavam

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="container">
         <div class="row" style="padding-top:50px">
             <div class="col-sm-5">
-                <img src="livro.JPG">
+                <img src="livro.jpg">
             </div>
             <div class="col-sm-3">
                 <p>
@@ -119,7 +119,7 @@
     <div class="container">
         <div class="row" style="padding-top:50px">
             <div class="col-sm-5">
-                <img src="pc.JPG">
+                <img src="pc.jpg">
             </div>
             <div class="col-sm-3">
                 <p>
@@ -136,7 +136,7 @@
         <div class="row" style="padding-top:50px">
 
             <div class="col-sm-12 text-center">
-                <img src="hand.JPG">
+                <img src="hand.jpg">
                 <p>Clientes Satisfeitos</p>
             </div>
         </div>
@@ -147,16 +147,16 @@
 
             </div>
             <div class="col-sm-2">
-                <img src="exlege.JPG">
+                <img src="exlege.jpg">
             </div>
             <div class="col-sm-2">
-                <img src="goiasjr.JPG">
+                <img src="goiasjr.jpg">
             </div>
             <div class="col-sm-2">
-                <img src="nayaraujo.JPG">
+                <img src="nayaraujo.jpg">
             </div>
             <div class="col-sm-2">
-                <img src="statusjr.JPG">
+                <img src="statusjr.jpg">
             </div>
             <div class="col-sm-2">
 
