Com Fonte correta

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="levelstyle.css" media="screen" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
 </head>
 
-<body>
+<body style="font-family: 'Lato', sans-serif">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
@@ -26,9 +27,9 @@
     <div class="container">
         <div class="row" id="sobre">
             <div class="col-sm-5 col-md-5 col-xl-5">
-                <p>
-                    Level 5 - Empresa Júnior de Informática
 
+                <h3>Level 5 - Empresa Júnior de Informática</h3>
+                <p>
                     A Level 5 foi a maneira como os alunos do Instituto de Informática da Universidade Federal de
                     Goiás
                     encontraram para colocarem todo seu conhecimento em prática.
@@ -176,10 +177,10 @@
 
                 <div class="col-sm-3">
                     <h3>Contato</h3>
-                        <p>E-mail: contato@level5jr.com.br
+                    <p>E-mail: contato@level5jr.com.br
                         Telefone: +55 (62) 98205-3820</p>
-                        <h3>Endereço</h3>
-                        <p>Avenida Esperança, 1533
+                    <h3>Endereço</h3>
+                    <p>Avenida Esperança, 1533
                         (Via Local: Alameda Palmeiras)
                         Quadra D, bloco 8,
                         Sala 5, Campus Samambaia, UFG
@@ -193,7 +194,8 @@
                     <div class="contato">
                         <input type="text" placeholder="Nome"><br><br>
                         <input type="text" placeholder="E-mail"><br><br>
-                        <input type="text" placeholder="Mensagem">
+                        <input type="text" placeholder="Mensagem"><br><br>
+                        <button>Enviar</button>
                     </div>
                 </div>
             </div>
